[project]
name = "langchain-example"
version = "0.1.0"
description = ""
authors = [{ name = "James", email = "jameskowal10@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "langchain (>=0.3.21,<0.4.0)",
  "langchain-anthropic (>=0.3.10,<0.4.0)",
  "faiss-cpu (>=1.10.0,<2.0.0)",
  "langgraph (>=0.3.21,<0.4.0)",
  "langchain-community (>=0.3.20,<0.4.0)",
  "langchain-core (>=0.3.49,<0.4.0)",
]

[tool.poetry]
packages = [{ include = "langchain_example", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
